globalstyle.css
#sidebar{
    background-color: #09021f;
    width: 20vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
    text-align: center;
    margin-top: 50px;
    
    display: inline-block;
    
    font-size: 16px;
    font-size: 2vmin;
    font-family: Lato;
    color: white;
}


#topbar{
    background-color: #09021f;
    width: 100vw;
    height: 50px;
    
    display: inline-block;
    
    margin: 0;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    
    font-family: Lato;
}

#pagecontents{
    font-size: 15px;
    font-family: Lato;
    margin-left: 20vw;
    margin-top: 50px;
    
    
}

#logo{
    align-self: center;
    top: -25px;
    left: calc(7.5vw - 55px);
    position: absolute;
}

#logo:hover{
    opacity:0.5;
}

.centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

h3{
    padding: 0px;
    margin: 0;
}

body{
    background-color:whitesmoke;
}

button{
    padding-top: 25px;
    padding-bottom: 25px;
    background: transparent;
    color: white;
    border-width: 0px;
    font-family: inherit;
    font-size: inherit;
    word-wrap: break-word;
    width: inherit;
}

button:hover{
    color:gray;
    cursor:pointer;
}

b{
    font-size: 25px;
}

